external-crates/move/crates/move-compiler/tests/move_check/typing/recursive_local.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC04010]: cannot infer type
  ┌─ tests/move_check/typing/recursive_local.move:4:13
  │
4 │         let x;
  │             ^ Could not infer this type. Try adding an annotation

error[EC04005]: expected a single type
  ┌─ tests/move_check/typing/recursive_local.move:5:9
  │
5 │         x = (x, 0u64);
  │         ^   --------- Expected a single type, but found expression list type: '(_, u64)'
  │         │    
  │         Invalid type for local

error[EC04008]: recursive type not allowed
  ┌─ tests/move_check/typing/recursive_local.move:5:9
  │
4 │         let x;
  │             - Unable to infer the type. Recursive type found.
5 │         x = (x, 0u64);
  │         ^ Invalid assignment to variable 'x'

error[EC04010]: cannot infer type
  ┌─ tests/move_check/typing/recursive_local.move:5:14
  │
5 │         x = (x, 0u64);
  │              ^ Could not infer this type. Try adding an annotation
